--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.HHSRAndroidProject1">
-        <activity android:name=".MovieIfo.MovieInformationActivity"></activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MovieIfo.Movie_Database_API"/>
+        <activity android:name=".MovieIfo.MovieInfoRecord"/>
+        <activity android:name=".MovieIfo.SaveSecondActivity"/>
+        <activity android:name=".MovieIfo.SavedMovies"/>
+
+
+
     </application>
 
 </manifest>
