--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".oct.OCTranspoBusRouteActivity" />
         <activity android:name=".oct.StationDetail" />
         <activity android:name=".oct.Favourites" />
+        <activity android:name=".oct.RouteDetail"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
