--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="algonquin.cst2335.hhsrandroidproject1" >
+    package="algonquin.cst2335.hhsrandroidproject1">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,17 +9,17 @@
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HHSRAndroidProject1" >
+        android:theme="@style/Theme.HHSRAndroidProject1">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".soccergamesapi.SoccerGameActivity" />
+        <activity android:name=".soccergamesapi.SoccerGameActivity" />
     </application>
 
 </manifest>
